[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "agouliel", email = "agouliel@gmail.com"},
]
dependencies = ["quart>=0.20.0", "quart-auth>=0.11.0"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
addopts = "--showlocals"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.pdm.scripts]
test = {cmd = "pytest tests/", env_file = "testing.env"}
start = {cmd = "quart --app src/backend/run.py run --port 5050", env_file = "development.env"}